--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-*.js linguist-language=Vue
-*.css linguist-language=Vue
-*.html linguist-language=Vue
+*.css linguist-language=vue
+*.less linguist-language=vue
+*.js linguist-language=vue
+*.html linguist-language=vue
